# syft-ingest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-rebase-contentfetcher-abstraction/: 01-01-SUMMARY.md  01-02-SUMMARY.md
docs/ideas/: graph-vector-rags.md
docs/superpowers/plans/: 2026-04-13-sync-async-fetcher-framework.md
notebooks/: api.ipynb  data-acquisition.ipynb
scripts/: embed_posts_multimodal.py  embed_video_multimodal.py
syft_ingest/: __init__.py  cli.py  setup.py
syft_ingest/core/: exporters.py  fetcher.py  gather.py  ingest.py  lifecycle.py  models.py  registry.py  source_specs.py  url_router.py
syft_ingest/rag/embedders/: __init__.py  clip_contract.py  (+2 more)
syft_ingest/sources/: __init__.py  _meta_utils.py  _social_media_common.py  brightdata.py  facebook.py  instagram.py  local.py  youtube.py
tests/: conftest.py  test_brightdata.py  test_cli.py  test_clip_contract.py  test_e2e.py  test_facebook.py  test_fetcher.py  test_ingest_api.py  test_ingest_internals.py  test_instagram.py  test_local.py  test_meta_utils.py  test_multimodal_post.py  test_multimodal_video.py  test_registry.py  test_source_specs.py  test_url_router.py
tests/integration/: test_gather_with_urls.py  test_router_dispatch.py
tests/unit/: test_e2e.py  test_fetcher.py  test_ingest_internals.py  test_lifecycle.py  test_meta_utils.py  test_registry.py  test_source_specs.py  test_url_router.py
(+7 files in other folders)
