[project]
name = "syft-ingest"
version = "0.1.0"
description = "Content aggregator — person-centric or topic-centric. Scrape, normalize, deliver."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.0",
    "yt-dlp>=2026.3.17",
    "loguru>=0.7",
    "brightdata-sdk>=2.3.0",

]

[project.optional-dependencies]
web = ["trafilatura>=1.0", "beautifulsoup4>=4.12"]
arxiv = ["arxiv>=2.0", "pymupdf>=1.23"]
podcast = ["openai-whisper>=20230918"]
rag = ["fastembed>=0.3", "langchain-text-splitters>=0.2"]
multimodal = [
    "opencv-python-headless>=4.10",
    "Pillow>=10.0",
    "sentence-transformers>=3.0",
]
qdrant = ["syft-ingest[rag]", "qdrant-client>=1.9"]
weaviate = ["syft-ingest[rag]", "weaviate-client>=4.0"]
chroma = ["syft-ingest[rag]", "chromadb>=0.4"]
openai-embeddings = ["openai>=1.0"]
notebooklm = ["notebooklm-py>=0.1"]
all = [
    "syft-ingest[web]",
    "syft-ingest[arxiv]",
    "syft-ingest[podcast]",
    "syft-ingest[multimodal]",
    "syft-ingest[qdrant]",
    "syft-ingest[chroma]",
    "syft-ingest[weaviate]",
    "syft-ingest[openai-embeddings]",
    "syft-ingest[notebooklm]",
]

[project.scripts]
syft-ingest = "syft_ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "jupyter>=1.0",
    "ipykernel>=7.2.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
